* Added a name attribute to Range class
* Changed the name of class Range to Block, and many other places related
* Updated some inconsistent places in the source code
* Updated README with instructions on how to extend the library
* Removed all sample files that are not explicitly-declared distributable
* Added a shell script to download the sample files
* Other slight changes

20:13 2007-8-19 GMT+8 version 337
* Removed all non-NULL assertions after new()
* Re-wrote the Implementation of UxdDataSet, rmoved the UxdLikeDataSet class
* Found some new sample files (raw_v2, udf, uxd, pdCIF) to test the existing code. Fixed bugs to process pdCIF files.
* Added support to the Philips Raw Scan format (.RD).
* Some other trivial changes, such as changing to use fmt_info.ftype in the Ctor, etc
* Added the LGPL 2.1 text file as COPYING

9:47 2007-8-18 GMT+8 version 335
* Changed to use Class Column to represent a 1-D data
* If SPE is linear,  set fixed_step = true
* Export_xy_file is modified with necessary changes, and output column names of x, y, stddev if they exist
* Depressed exceptions in check(): only return a boolean value.
* Changed to Read multiple columns in a range of pdCIF format, the uncertainty is treated as a separate column
* Moved stream& arg from Ctors to load_data() member functions. Got rid of the stream &/* member f in DataSet, passed to other members functions if necessary
* Added the clear() function in DataSet.
* Re-wrote one of the uxd-like formats: Rigaku_dat
* Some other trivial changes

1:38 2007-8-14 GMT+8 version 333
* Added support to pdCIF format (Crystallographic Information File for Powder Diffraction).

3:09 2007-8-9 GMT+8 version 332
* Made some necessary changes, got rid of the assumptions that the input is always correct. program defensively, check every point where error may occur.

8:17 2007-8-7 GMT+8 version 329
* Changed "ChangLog" to the right order